src/type_checker/tests/snapshots/type_checker@binop.lt.snap
---
source: src/type_checker/mod.rs
assertion_line: 577
expression: asts
input_file: src/type_checker/tests/inputs/binop.lt
---
- - "// basic\nfn foo() {\n    1 + 2\n}\n"
  - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: foo
                args: []
                ret_ty: Void
              body:
                Block:
                  list:
                    - Expr:
                        BinOp:
                          sym: Add
                          lhs:
                            Expr:
                              Lit:
                                value:
                                  Int32: 1
                                ty: Int32
                          rhs:
                            Expr:
                              Lit:
                                value:
                                  Int32: 2
                                ty: Int32
                          ty: Int32
                  ty: Int32
- - "\n// basic with var\nfn foo() {\n    let a: int = 1\n    a + 2\n}\n"
  - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: foo
                args: []
                ret_ty: Void
              body:
                Block:
                  list:
                    - Stmt:
                        Let:
                          name: a
                          antn: Int32
                          init:
                            Expr:
                              Lit:
                                value:
                                  Int32: 1
                                ty: Int32
                    - Expr:
                        BinOp:
                          sym: Add
                          lhs:
                            Expr:
                              Ident:
                                name: a
                                ty: Int32
                          rhs:
                            Expr:
                              Lit:
                                value:
                                  Int32: 2
                                ty: Int32
                          ty: Int32
                  ty: Int32
- - "\n// complex\nfn foo() {\n    let a: int = 1\n    a + 2 / 4 + (2 * 2)\n}\n"
  - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: foo
                args: []
                ret_ty: Void
              body:
                Block:
                  list:
                    - Stmt:
                        Let:
                          name: a
                          antn: Int32
                          init:
                            Expr:
                              Lit:
                                value:
                                  Int32: 1
                                ty: Int32
                    - Expr:
                        BinOp:
                          sym: Add
                          lhs:
                            Expr:
                              BinOp:
                                sym: Add
                                lhs:
                                  Expr:
                                    Ident:
                                      name: a
                                      ty: Int32
                                rhs:
                                  Expr:
                                    BinOp:
                                      sym: Div
                                      lhs:
                                        Expr:
                                          Lit:
                                            value:
                                              Int32: 2
                                            ty: Int32
                                      rhs:
                                        Expr:
                                          Lit:
                                            value:
                                              Int32: 4
                                            ty: Int32
                                      ty: Int32
                                ty: Int32
                          rhs:
                            Expr:
                              BinOp:
                                sym: Mul
                                lhs:
                                  Expr:
                                    Lit:
                                      value:
                                        Int32: 2
                                      ty: Int32
                                rhs:
                                  Expr:
                                    Lit:
                                      value:
                                        Int32: 2
                                      ty: Int32
                                ty: Int32
                          ty: Int32
                  ty: Int32
- - "\n// func call\nfn plusOne(x: int) -> int {\n    x + 1\n}\nfn main() {\n    1 + plusOne(3)\n}\n"
  - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: plusOne
                args:
                  - - x
                    - Int32
                ret_ty: Int32
              body:
                Block:
                  list:
                    - Expr:
                        BinOp:
                          sym: Add
                          lhs:
                            Expr:
                              Ident:
                                name: x
                                ty: Int32
                          rhs:
                            Expr:
                              Lit:
                                value:
                                  Int32: 1
                                ty: Int32
                          ty: Int32
                  ty: Int32
        - Stmt:
            Fn:
              proto:
                name: main
                args: []
                ret_ty: Int32
              body:
                Block:
                  list:
                    - Expr:
                        BinOp:
                          sym: Add
                          lhs:
                            Expr:
                              Lit:
                                value:
                                  Int32: 1
                                ty: Int32
                          rhs:
                            Expr:
                              Call:
                                name: plusOne
                                args:
                                  - Expr:
                                      Lit:
                                        value:
                                          Int32: 3
                                        ty: Int32
                                ty: Int32
                          ty: Int32
                  ty: Int32
- - "\n// mismatch\nfn foo() {\n    2.0 + 1\n}\n"
  - Err: "Mismatched types in binop: `float` != `int32`"
- - "\n// bool ret\nfn foo() -> bool {\n    2 == 1\n}\n"
  - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: foo
                args: []
                ret_ty: Bool
              body:
                Block:
                  list:
                    - Expr:
                        BinOp:
                          sym: Eq
                          lhs:
                            Expr:
                              Lit:
                                value:
                                  Int32: 2
                                ty: Int32
                          rhs:
                            Expr:
                              Lit:
                                value:
                                  Int32: 1
                                ty: Int32
                          ty: Bool
                  ty: Bool
- - "\n// bad lhs in assign\nfn main(x: int) {\n    x + 1 = 1\n}\n"
  - Err: Expected LHS to be a variable for assignment
- - "\n// bools in cmp 1\nfn main(x: int) {\n    true || false\n}\n"
  - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: main
                args:
                  - - x
                    - Int32
                ret_ty: Int32
              body:
                Block:
                  list:
                    - Expr:
                        BinOp:
                          sym: Or
                          lhs:
                            Expr:
                              Lit:
                                value:
                                  Bool: true
                                ty: Bool
                          rhs:
                            Expr:
                              Lit:
                                value:
                                  Bool: false
                                ty: Bool
                          ty: Bool
                    - Expr:
                        Lit:
                          value:
                            Int32: 0
                          ty: Int32
                  ty: Bool
- - "\n// bools in cmp 2\nfn main(x: bool) {\n    x == false\n}\n"
  - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: main
                args:
                  - - x
                    - Bool
                ret_ty: Int32
              body:
                Block:
                  list:
                    - Expr:
                        BinOp:
                          sym: Eq
                          lhs:
                            Expr:
                              Ident:
                                name: x
                                ty: Bool
                          rhs:
                            Expr:
                              Lit:
                                value:
                                  Bool: false
                                ty: Bool
                          ty: Bool
                    - Expr:
                        Lit:
                          value:
                            Int32: 0
                          ty: Int32
                  ty: Bool
- - "\n// bad lit int\nfn main(x: int) {\n    true && 1\n}\n"
  - Err: Literal is an integer in a bool context
- - "\n// bad lit float\nfn main(x: int) {\n    1.0 || true\n}\n"
  - Err: Literal is a float in a bool context
- - "\n// bad cmp types\nfn main(x: int) {\n    true > true\n}\n"
  - Err: "Expected numeric type on either side of `>`, got lhs: `bool`, rhs: `bool`"
- - "\n// bad math types\nfn main(x: int) {\n    true + false\n}\n"
  - Err: "Expected numeric type on either side of `+`, got lhs: `bool`, rhs: `bool`"
- - "\n// lit char 1\nfn main(x: int) {\n    'a' > 'c'\n}\n"
  - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: main
                args:
                  - - x
                    - Int32
                ret_ty: Int32
              body:
                Block:
                  list:
                    - Expr:
                        BinOp:
                          sym: Gt
                          lhs:
                            Expr:
                              Lit:
                                value:
                                  Char: 97
                                ty: Char
                          rhs:
                            Expr:
                              Lit:
                                value:
                                  Char: 99
                                ty: Char
                          ty: Bool
                    - Expr:
                        Lit:
                          value:
                            Int32: 0
                          ty: Int32
                  ty: Bool
- - "\n// lit char 2\nfn main(x: char) {\n    x > 'c'\n}\n"
  - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: main
                args:
                  - - x
                    - Char
                ret_ty: Int32
              body:
                Block:
                  list:
                    - Expr:
                        BinOp:
                          sym: Gt
                          lhs:
                            Expr:
                              Ident:
                                name: x
                                ty: Char
                          rhs:
                            Expr:
                              Lit:
                                value:
                                  Char: 99
                                ty: Char
                          ty: Bool
                    - Expr:
                        Lit:
                          value:
                            Int32: 0
                          ty: Int32
                  ty: Bool

