src/type_checker/tests/snapshots/type_checker@block.lt.snap
---
source: src/type_checker/mod.rs
assertion_line: 517
expression: asts
input_file: src/type_checker/tests/inputs/block.lt
---
- - "let x: int = {\n    1\n}\n"
  - Ok:
      nodes:
        - Stmt:
            Let:
              name: x
              antn: Int32
              init:
                Expr:
                  Block:
                    list:
                      - Expr:
                          Lit:
                            value:
                              Int32: 1
                            ty: Int32
                    ty: Int32
- - "\nlet x: int = {\n    1.0\n}\n"
  - Err: "Types don't match in let statement. Annotated with `int32` but initial value is `float`"
- - "\nfn foo() {\n    let x: int = {\n        11.0\n        foo()\n    }\n}\n"
  - Err: "Types don't match in let statement. Annotated with `int32` but initial value is `void`"

