src/type_checker/tests/snapshots/type_checker@cond.input.snap
---
source: src/type_checker/mod.rs
assertion_line: 512
expression: ir
input_file: src/type_checker/tests/inputs/cond.input
---
- Ok:
    nodes:
      - Stmt:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: Void
            body:
              - Expr:
                  Cond:
                    cond_expr:
                      BinOp:
                        sym: Gt
                        lhs:
                          Expr:
                            Lit:
                              value:
                                Int32: 1
                              ty: Int32
                        rhs:
                          Expr:
                            Lit:
                              value:
                                Int32: 2
                              ty: Int32
                        ty: Bool
                    then_block:
                      - Expr:
                          Lit:
                            value:
                              Int32: 1
                            ty: Int32
                    else_block:
                      - Expr:
                          Lit:
                            value:
                              Int32: 2
                            ty: Int32
                    ty: Int32
- Err: "Mismatched types in binop: `int8` != `int16`"
- Err: Conditional should always be a bool
- Err: "Both arms of conditional must be the same type: `then` == int32; `else` == float"

