src/type_checker/tests/snapshots/type_checker@cond.lt.snap
---
source: src/type_checker/mod.rs
assertion_line: 595
expression: asts
input_file: src/type_checker/tests/inputs/cond.lt
---
- - "// basic\nfn foo() {\n    if 1 > 2 {\n        1\n    } else {\n        2\n    }\n}\n"
  - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: foo
                args: []
                ret_ty: Void
              body:
                Block:
                  list:
                    - Expr:
                        Cond:
                          cond_expr:
                            BinOp:
                              sym: Gt
                              lhs:
                                Expr:
                                  Lit:
                                    value:
                                      Int32: 1
                                    ty: Int32
                              rhs:
                                Expr:
                                  Lit:
                                    value:
                                      Int32: 2
                                    ty: Int32
                              ty: Bool
                          then_block:
                            Block:
                              list:
                                - Expr:
                                    Lit:
                                      value:
                                        Int32: 1
                                      ty: Int32
                              ty: Int32
                          else_block:
                            Block:
                              list:
                                - Expr:
                                    Lit:
                                      value:
                                        Int32: 2
                                      ty: Int32
                              ty: Int32
                          ty: Int32
                  ty: Int32
- - "\n// bad cond\nfn foo() {\n    let x: int8 = 1\n    let y: int16 = 2\n    if x < y {\n        1\n    }\n}\n"
  - Err: "Mismatched types in binop: `int8` != `int16`"
- - "\n// bad cond\nfn foo() {\n    if 1.0 {\n        1\n    }\n}\n"
  - Err: Conditional should always be a bool
- - "\n// mismatch arms\nfn foo() {\n    if 1 > 2 {\n        1\n    } else {\n        2.0\n    }\n}\n"
  - Err: "Both arms of conditional must be the same type: `then` == `int32`; `else` == `float`"

